--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,12 +7,15 @@
   </head>
   <body>
     <div id="connection-header">connected to web socket: false</div>
-    <h1>login</h1>
-    <!-- <form id="form-login"> -->
+    <h3>login</h3>
+
     <input id="username" placeholder="enter username" />
-    <input id="password" placeholder="enter password" />
     <button type="submit" id="login-btn">login</button>
-    <!-- </form> -->
+
+    <br />
+    <input id="chat-name" placeholder="create chat" />
+    <button type="submit" id="create-chat-btn">Create chat</button>
+
     <br />
     <input id="message-input" />
     <button id="send-message-btn">Send Message</button>
@@ -33,8 +36,11 @@
           case "new_message":
             console.log("there is a new message", event.payload);
             break;
+          case "chat_updated":
+            console.log("new chat information in the client", event.payload);
+            break;
           default:
-            alert("unsupport event type");
+            alert("unsupport event type", event.type);
         }
       }
 
@@ -48,11 +54,9 @@
         .addEventListener("click", handleSubmit);
 
       async function handleSubmit(e) {
-        console.log("login");
         e.preventDefault();
         const data = {
           username: document.getElementById("username").value,
-          password: document.getElementById("password").value,
         };
 
         try {
@@ -64,7 +68,7 @@
           if (response.ok) {
             const data = await response.json();
             // connect to websocket
-            connectToWebSocket(data.opt);
+            connectToWebSocket(data.username);
           } else {
             throw "unauthenticated";
           }
@@ -74,10 +78,10 @@
         }
       }
 
-      function connectToWebSocket(opt) {
+      function connectToWebSocket(username) {
         if (window["WebSocket"]) {
           console.log("support web socket");
-          conn = new WebSocket(`ws://localhost:8080/ws?opt=${opt}`);
+          conn = new WebSocket(`ws://localhost:8080/ws?username=${username}`);
 
           conn.onopen = function (evt) {
             document.getElementById("connection-header").innerText =
@@ -110,6 +114,20 @@
         }
 
         sendEvent("new_message", inputEl.value);
+      }
+
+      document
+        .getElementById("create-chat-btn")
+        .addEventListener("click", createChat);
+
+      function createChat() {
+        const chatName = document.getElementById("chat-name").value;
+        const data = {
+          chat_name: chatName,
+          participants: ["dave", "nico"],
+        };
+
+        sendEvent("create_chat", data);
       }
     </script>
   </body>
